# ESP32CAM-ONVIF

./: .config  .config.old  .gitignore  CMakeLists.txt  Kconfig  MIGRATION_PLAN.md  Makefile  README.md  gen_config.py  platformio.ini  platformio_pre_script.py
ESP32CAM-ONVIF/: config.h  web_config.cpp
boards/: custom_esp32_audio_cam.json
data/: README.md  app.js  index.html  style.css
include/: CRtspSession.h  CStreamer.h  H264Streamer.h  MyStreamer.h  audio_manager.h  auto_flash.h  bluetooth_manager.h  board_config.h  camera_control.h  config.h  gdrive_manager.h  h264_encoder.h  index_html.h  motion_detection.h  mqtt_manager.h  onvif_server.h  platglue-esp32.h  platglue.h  rtsp_server.h  sd_recorder.h  serial_console.h  status_led.h  telegram_manager.h  web_config.h  webdav_server.h  wifi_manager.h
src/: CMakeLists.txt  CRtspSession.cpp  CStreamer.cpp  H264Streamer.cpp  MyStreamer.cpp  audio_manager.cpp  auto_flash.cpp  bluetooth_manager.cpp  camera_control.cpp  config.cpp  gdrive_manager.cpp  h264_encoder.cpp  main.cpp  motion_detection.cpp  mqtt_manager.cpp  onvif_server.cpp  rtsp_server.cpp  sd_recorder.cpp  serial_console.cpp  status_led.cpp  telegram_manager.cpp  webdav_server.cpp  wifi_manager.cpp
